# ecommerce/src/config/swagger-output.json
@@ -21,16 +21,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "customerId": {
+                "customer": {
                   "example": "any"
                 },
                 "orderLineItems": {
                   "example": "any"
                 },
-                "status": {
+                "totalAmount": {
                   "example": "any"
                 },
-                "quotationId": {
+                "status": {
                   "example": "any"
                 }
               }
@@ -40,6 +40,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -58,12 +61,12 @@
         }
       }
     },
-    "/api/v1/sales-order/{id}": {
+    "/api/v1/sales-order/{salesOrderId}": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "salesOrderId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -73,8 +76,8 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -85,7 +88,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "salesOrderId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -96,16 +99,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "customerId": {
+                "customer": {
                   "example": "any"
                 },
                 "orderLineItems": {
                   "example": "any"
                 },
-                "status": {
+                "totalAmount": {
                   "example": "any"
                 },
-                "quotationId": {
+                "status": {
                   "example": "any"
                 }
               }
@@ -116,8 +119,8 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -128,7 +131,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "salesOrderId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -138,8 +141,8 @@
           "204": {
             "description": "No Content"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -548,9 +551,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -588,9 +588,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -612,9 +609,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -690,9 +684,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -736,9 +727,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -760,9 +748,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
