# ecommerce/src/sales/controllers/salesOrderController.js
@@ -1,25 +1,9 @@
 const SalesOrder = require('../models/salesOrder');
-const Customer = require('../../accounting/models/customer');
 
 exports.createSalesOrder = async(req, res) => {
   try {
-    const { customerId, orderLineItems, status } = req.body;
-    let totalAmount = 0;
-    orderLineItems.map(async (orderLineItem) => {
-      totalAmount += orderLineItem.subtotal;
-    });
-    const customer = await Customer.findById(customerId);
-    const salesOrder = new SalesOrder({
-      customer: {
-        id :customer._id,
-        name:customer.name,
-        invoiceAddress:customer.invoiceAddress,
-        deliveryAddress:customer.deliveryAddress
-      },
-      orderLineItems,
-      totalAmount,
-      status
-    });
+    const { customer, orderLineItems, totalAmount, status} = req.body;
+    const salesOrder = new SalesOrder({customer, orderLineItems, totalAmount, status});
     const savedSalesOrder = await salesOrder.save();
     res.status(201).json(savedSalesOrder);
   } catch (error) {
@@ -38,10 +22,10 @@ exports.getAllSalesOrders = async(req, res) => {
 
 exports.getSalesOrderById = async(req, res) => {
   try {
-    const salesOrder = await SalesOrder.findById(req.params.id);
-    if (!salesOrder) {
-      return res.status(404).json({message:'Sales order not found.'});
-    }
+    const salesOrder = await SalesOrder.findById(req.params.salesOrderId);
+    // if (!salesOrder) {
+    //   return res.status(404).json({message:'Sales order not found.'});
+    // }
     return res.status(200).json(salesOrder);
   } catch (error) {
     res.status(500).json({message:'Error retreiving sales order.', error});
@@ -50,33 +34,13 @@ exports.getSalesOrderById = async(req, res) => {
 
 exports.updateSalesOrder = async(req, res) => {
   try {
-    const { customerId, orderLineItems, status, quotationId } = req.body;
-    let totalAmount = 0;
-    orderLineItems.map(async (orderLineItem) => {
-      const subtotal = orderLineItem.quantity * orderLineItem.price;
-      totalAmount += subtotal;
-      orderLineItem.subtotal = subtotal;
-    });
-    const customer = await Customer.findById(customerId);
-    const salesOrder = await SalesOrder.findByIdAndUpdate(req.params.id,{
-      customer: {
-        id :customer._id,
-        name:customer.name,
-        invoiceAddress:customer.invoiceAddress,
-        deliveryAddress:customer.deliveryAddress
-      },
-      orderLineItems,
-      totalAmount,
-      status,
-      quotationId
-    },{
-      projection:'-__v -_id',
-      new:true,
-      runValidators:true
-    });
-    if (!salesOrder) {
-      res.status(404).json('Sales order not found.');
-    }
+    const { customer, orderLineItems, totalAmount, status} = req.body;
+    const salesOrder = await SalesOrder.findByIdAndUpdate(req.params.salesOrderId,
+      {customer, orderLineItems, totalAmount, status},
+      {projection:'-__v -_id', new:true, runValidators:true});
+    // if (!salesOrder) {
+    //   res.status(404).json('Sales order not found.');
+    // }
     res.status(200).json(salesOrder);
   } catch (error) {
     res.status(500).json({message:'Error updating sales order.', error});
@@ -85,10 +49,10 @@ exports.updateSalesOrder = async(req, res) => {
 
 exports.deleteSalesOrder = async(req, res) => {
   try {
-    const salesOrder = await SalesOrder.findByIdAndDelete(req.params.id);
-    if (!salesOrder) {
-      res.status(404).json('Sales order not found.');
-    }
+    await SalesOrder.findByIdAndDelete(req.params.salesOrderId);
+    // if (!salesOrder) {
+    //   res.status(404).json('Sales order not found.');
+    // }
     return res.status(204).json({message:'Sales order deleted successfully'});
   } catch (error) {
     res.status(500).json({message:'Error deleting sales order.', error});
