# ecommerce/src/sales/routes/salesOrders.js
@@ -1,12 +1,12 @@
 const router = require('express').Router();
 const salesOrderController = require('../controllers/salesOrderController');
-const {salesOrderIdValidation, customerValidation, orderLineItemValidations, totalAmountValidation} = require('../middlewares/salesOrderValidation');
+const {salesOrderIdValidation, customerValidation, orderLineItemsValidation, totalAmountValidation} = require('../middlewares/salesOrderValidation');
 const {checkValidationPassed} = require('../../middlewares/chackValidationPassed');
 
-router.post('/', [customerValidation, orderLineItemValidations, totalAmountValidation], checkValidationPassed, salesOrderController.createSalesOrder);
+router.post('/', [customerValidation, orderLineItemsValidation, totalAmountValidation],checkValidationPassed, salesOrderController.createSalesOrder);
 router.get('/', salesOrderController.getAllSalesOrders);
 router.get('/:salesOrderId', salesOrderIdValidation, checkValidationPassed, salesOrderController.getSalesOrderById);
-router.put('/:salesOrderId', [salesOrderIdValidation, customerValidation, orderLineItemValidations, totalAmountValidation],
+router.put('/:salesOrderId', [salesOrderIdValidation, customerValidation, orderLineItemsValidation, totalAmountValidation],
   checkValidationPassed, salesOrderController.updateSalesOrder);
 router.delete('/:salesOrderId', salesOrderIdValidation, checkValidationPassed, salesOrderController.deleteSalesOrder);
 
